@@ -47,11 +47,17 @@ our %pkgcfg = ExtUtils::PkgConfig->find(
 our @xs_files = <xs/*.xs>;
 our %pm_files = (
     'Clutter.pm' => '$(INST_LIBDIR)/Clutter.pm',
+
+    # Keysyms.pm is generated by Makefile.PL
+    'build/Keysyms.pm' => '$(INST_LIBDIR)/Clutter/Keysyms.pm',
 );
 
 our %pod_files = (
-    'Clutter.pm'       => '$(INST_MAN3DIR)/Clutter.$(MAN3EXT)',
+    'Clutter.pm'   => '$(INST_MAN3DIR)/Clutter.$(MAN3EXT)',
 
+    # Keysyms.pm is generated by Makefile.PL
+    'build/Keysyms.pm' => '$(INST_MAN3DIR)/Clutter::Keysyms.$(MAN3EXT)',
+    
     Glib::MakeHelper->do_pod_files(@xs_files),
 );
 
