@@ -1,5 +1,12 @@
 2007-04-25  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* Makefile.PL: Fix inclusion of the autogenerated Keysyms
+	module.
+
+	* examples/hello.pl: Test key symbols.
+
+2007-04-25  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* Clutter.pm: Post-release bump to VERSION 0.231.
 
 	* MANIFEST:
